--- a/index.html
+++ b/index.html
@@ -740,6 +740,29 @@
                             <div class="publication media">
                                 <div class='container' style="padding-left: 0px; padding-right: 0px;">
                                     <div class='col-sm-12 col-md-3' style="padding-left: 0px;">
+                                        <img class="papericon" src='img/papers/paintbyword.jpg'>
+                                    </div>
+                                    <div class='col-sm-12 col-md-9'>
+                                        <div class="new-media-body">
+                                            <strong>Paint by Word</strong>
+                                            <div class="author-list">
+                                                David Bau*, <u>Alex Andonian*</u>, Audrey Cui, YeonHwan Park, Ali Jahanian, Aude Oliva, Antonio Torralba.
+                                                <br>
+                                                <i>arXiv:2103.10951, 2021.</i>
+                                                <!-- To be submitted to <i>Conference on Computer Vision and Pattern Recognition (CVPR)</i>, 2021 -->
+                                            </div>
+                                            <div>
+                                                <a class="btn btn-primary btn-xs"
+                                                    href="https://arxiv.org/abs/2103.10951" target="_blank"><i
+                                                        class="fa fa-file-text" title="PDF"></i> PDF</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="publication media">
+                                <div class='container' style="padding-left: 0px; padding-right: 0px;">
+                                    <div class='col-sm-12 col-md-3' style="padding-left: 0px;">
                                         <img class="papericon" src='img/papers/va2-red1.png'>
                                     </div>
                                     <div class='col-sm-12 col-md-9'>
@@ -756,7 +779,7 @@
                                             </div>
                                             <div>
                                                 <a class="btn btn-primary btn-xs"
-                                                    href="https://openreview.net/forum?id=g21u6nlbPzn"
+                                                    href="https://arxiv.org/abs/2102.07887"
                                                     target="_blank"><i class="fa fa-file-text" title="PDF"></i> PDF</a>
                                             </div>
                                         </div>
@@ -781,7 +804,7 @@
                                             </i>
                                             <div>
                                                 <a class="btn btn-primary btn-xs"
-                                                    href="https://arxiv.org/pdf/2008.05596.pdf" target="_blank"><i
+                                                    href="https://arxiv.org/abs/2008.05596" target="_blank"><i
                                                         class="fa fa-file-text" title="PDF"></i> PDF</a>
                                                 <a class="btn btn-primary btn-xs"
                                                     href="http://abstraction.csail.mit.edu/" target="_blank"><i
@@ -1194,24 +1217,7 @@
                                             </div>
                                         </div>
                                     </div> -->
-                                    <div class="publication media">
-                                        <div class='container' style="padding-left: 0px; padding-right: 0px;">
-                                            <div class='col-sm-12 col-md-3' style="padding-left: 0px;">
-                                                <img class="papericon" src='img/papers/biggan.jpg'>
-                                            </div>
-                                            <div class='col-sm-12 col-md-9'>
-                                                <div class="new-media-body">
-                                                    <strong>Understanding a Scene-centric BigGAN</strong>
-                                                    <div class="author-list">
-                                                        <u>Alex Andonian</u>, David Bau, Aude Oliva.
-                                                        <br>
-                                                        To be submitted to a 2021 computer vision conference.
-                                                        <!-- To be submitted to <i>Conference on Computer Vision and Pattern Recognition (CVPR)</i>, 2021 -->
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+
                                     <div class="publication media">
                                         <div class='container' style="padding-left: 0px; padding-right: 0px;">
                                             <div class='col-sm-12 col-md-3' style="padding-left: 0px;">
