--- a/index.html
+++ b/index.html
@@ -737,6 +737,31 @@
                                 <h3>Recent Publications</h3>
                             </center>
                             <li class="line-btn-row"></li>
+
+                            <div class="publication media">
+                                <div class='container' style="padding-left: 0px; padding-right: 0px;">
+                                    <div class='col-sm-12 col-md-3' style="padding-left: 0px;">
+                                        <img class="papericon" src='img/papers/algonauts.jpg' style="filter: hue-rotate(280deg);">
+                                    </div>
+                                    <div class='col-sm-12 col-md-9'>
+                                        <div class="new-media-body">
+                                            <strong>The Algonauts Project 2021 Challenge: How the Human Brain Makes Sense of a World in Motion</strong>
+                                            <div class="author-list">
+                                                Radoslaw Cichy, Kshitij Dwivedi, Benjamin Lahner, Alex Lascelles, Polina Iamshchinina, Monika Graumann, Alex Andonian,
+                                                Ratan Murty, Kendrick Kay, Gemma Roig, Aude Oliva.
+                                                <!-- <i>arXiv preprint arXiv:1905.05675, 2019. -->
+                                                <i>arXiv:1905.05675</i>, 2021.
+                                                <a class="btn btn-primary btn-xs"
+                                                    href="https://arxiv.org/abs/2104.13714v1"
+                                                    target="_blank"><i class="fa fa-file-text" title="PDF"></i> PDF</a>
+                                                <a class="btn btn-primary btn-xs" href="http://algonauts.csail.mit.edu/"
+                                                    target="_blank"><i class="fa fa-mouse-pointer"></i>Website</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="publication media">
                                 <div class='container' style="padding-left: 0px; padding-right: 0px;">
                                     <div class='col-sm-12 col-md-3' style="padding-left: 0px;">
@@ -965,13 +990,14 @@
                                                 <a class="btn btn-primary btn-xs"
                                                     href="http://algonauts.csail.mit.edu/AlgonautsProject2019_arXiv.pdf"
                                                     target="_blank"><i class="fa fa-file-text" title="PDF"></i> PDF</a>
-                                                <a class="btn btn-primary btn-xs" href="http://algonauts.csail.mit.edu/"
+                                                <a class="btn btn-primary btn-xs" href="http://algonauts.csail.mit.edu/2019"
                                                     target="_blank"><i class="fa fa-mouse-pointer"></i>Website</a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+
                             <div class="publication media">
                                 <div class='container' style="padding-left: 0px; padding-right: 0px;">
                                     <div class='col-sm-12 col-md-3' style='padding-left: 0px;'>
